# eagle_optimize

./: .gitignore  README.md  package-lock.json  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: personal-optimization-analyst.md
.claude/skills/optimization-context/: SKILL.md
.github/instructions/: python-3-9.instructions.md  typer-cli.instructions.md
src/eagle_optimize/: __init__.py  __main__.py  banner.py  claude_bridge.py  cli.py  config.py  copilot_bridge.py  questionnaire.py  reports.py  retrieval.py  storage.py  terminal_loader.py
tests/: test_claude_bridge.py  test_cli.py  test_config.py  test_copilot_bridge.py  test_reports.py  test_retrieval.py  test_storage.py  test_terminal_loader.py
