[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-optimize"
version = "0.1.0"
description = "Personal optimization CLI backed by Claude Code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
eagle-optimize = "eagle_optimize.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]